--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+zNVAVQlPm/p4ZlE65XVH",
+      "authorship_tag": "ABX9TyMjPtLRWaLLVWs/MjC+vCYk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "money_song = \"Money \" * amount_in_dollars\n",
         "print(money_song)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "print(amount_in_dollars)\n",
         "type (amount_in_dollars)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
         "money_song=\"Money Money Money\"\n",
         "print(money_song)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "if type (amount_in_dollars) == int:\n",
         "  print (\"整数!!!!\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
         "shoulder_height_meters = ( my_height_cm - head_height_cm ) / 100\n",
         "print(\"Shoulder height in meters = \" ,  shoulder_height_meters, \"?\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -821,7 +821,7 @@
         "print (int (-3.33))\n",
         "print(-3.33 // 1)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +852,7 @@
         "10.0\n",
         "print(float('33.3') + 0.2 )"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +903,7 @@
         "print(\"Pythonコードを実行しました!!!!\") \n",
         "print(\"おめでとう!!!!\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1021,7 @@
         "area = pi * radius ** 2\n",
         "print (\"円の面積: \" , area)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,46 +1054,33 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "uRoYRwBmR4XI",
-        "colab_type": "text"
+        "id": "cXU6Zk11lFUp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "0065701d-dca1-4e49-cf46-d2fb2b0c98a1"
       },
       "source": [
-        "\n",
-        "########### Setup code - don't touch this part ######################\n",
-        "# If you're curious, these are examples of lists. We'll talk about \n",
-        "# them in depth a few lessons from now. For now, just know that they're\n",
-        "# yet another type of Python object, like int or float.\n",
         "a = [1, 2, 3]\n",
         "b = [3, 2, 1]\n",
-        "q2.store_original_ids()\n",
-        "######################################################################\n",
-        "​\n",
-        "# Your code goes here. Swap the values to which a and b refer.\n",
-        "# If you get stuck, you can always uncomment one or both of the lines in\n",
-        "# the next cell for a hint, or to peek at the solution.\n",
-        "​\n",
-        "######################################################################\n",
-        "​\n",
-        "# Check your answer\n",
-        "q2.check()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q2.hint()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q2.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(a, b)\n",
+        "temp = a; a = b; b = temp\n",
+        "print(a, b)\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3] [3, 2, 1]\n",
+            "[3, 2, 1] [1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1103,100 +1090,105 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "## 3.\n",
-        "a) Add parentheses to the following expression so that it evaluates to 1.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "5 - 3 // 2\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q3.a.hint()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Check your answer (Run this code cell to receive credit!)\n",
-        "q3.a.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Questions, like this one, marked a spicy pepper are a bit harder.\n",
-        "\n",
-        "b) 🌶️ Add parentheses to the following expression so that it evaluates to 0\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "8 - 3 * 2 - 1 + 1\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Check your answer (Run this code cell to receive credit!)\n",
-        "q3.b.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "## 4. Alice, Bob and Carol have agreed to pool their Halloween candy and split it evenly among themselves. For the sake of their friendship, any candies left over will be smashed. For example, if they collectively bring home 91 candies, they'll take 30 each and smash 1.\n",
-        "Write an arithmetic expression below to calculate how many candies they must smash for a given haul.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Variables representing the number of candies collected by alice, bob, and carol\n",
-        "alice_candies = 121\n",
-        "bob_candies = 77\n",
-        "carol_candies = 109\n",
-        "​\n",
-        "# Your code goes here! Replace the right-hand side of this assignment with an expression\n",
-        "# involving alice_candies, bob_candies, and carol_candies\n",
-        "to_smash = -1\n",
-        "​\n",
-        "# Check your answer\n",
-        "q4.check()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q4.hint()\n",
-        "#q4.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Keep Going\n",
-        "Next up, you'll learn to write new functions and understand functions others write. This will make you at least 10 times more productive as a Python programmer."
+        "## 問題 3. カッコを使って計算結果を変えるクイズ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oxm7M6xcls1R",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "f641151e-b448-474e-c796-35d533703899"
+      },
+      "source": [
+        "# カッコを使って計算結果を1にする\n",
+        "print (5 - 3 // 2)\n",
+        "print ((5 - 3) // 2)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YuePq7mjmcFO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "fd67e134-d83b-4abf-dafb-b5eafde4dad1"
+      },
+      "source": [
+        "# カッコを使って計算結果を0にする\n",
+        "print(8 - 3 * 2 - 1 + 1)\n",
+        "print(8 - (3 * 2) - (1 + 1))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K_5FqJUaNuf8",
+        "id": "0LLxbCU7lrBX",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "## 問題 4. AliceとBobとCarolはハロウィーンキャンディを集めて3人で平等に分けて、余りが出た場合は潰して捨てることにしました。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FOgYBiPSn3Eg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fe2cb529-8e22-4f33-d3ff-647de157a2f8"
+      },
+      "source": [
+        "# 例えば、全部で91だった場合、30個ずつ取って、1個捨てる\n",
+        "# 捨てなければならないキャンディの数を算出する\n",
+        "alice_candies = 121\n",
+        "bob_candies = 77\n",
+        "carol_candies = 109\n",
+        "\n",
+        "to_smash = (alice_candies + bob_candies + carol_candies) % 3\n",
+        "print(to_smash)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
