--- a/020kagglepythonfunction001.ipynb
+++ b/020kagglepythonfunction001.ipynb
@@ -6,7 +6,7 @@
       "name": "020kagglepythonfunction001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMZkkogw22sW21X6TZYHym",
+      "authorship_tag": "ABX9TyPvWgWi4Ak5x5pxeWA1QcjE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -765,16 +765,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "N9oQ55u5i4G_",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "M_5a-M3Xkv3d",
         "colab_type": "text"
       },
@@ -804,7 +794,7 @@
         "\n",
         "round_to_three_places(3.14159)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +819,7 @@
         "\n",
         "round_to_three_places(3.14159)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,27 +843,100 @@
       },
       "source": [
         "## 問題 2. `round`の`ndigits`\n",
-        "`round`の2番目の引数`ndigits`は\n",
-        "The help for `round` says that `ndigits` (the second argument) may be negative.\n",
-        "What do you think will happen when it is? Try some examples in the following cell?\n",
+        "`round`の2番目の引数`ndigits`は負の数でもかまわないとhelp()は言っています。\n",
         "\n",
-        "Can you think of a case where this would be useful?\n",
+        "次のコードセルで実験して見て下さい。\n",
         "\n",
-        "# Put your test code here\n",
+        "どんなときに役に立ちますか？"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N5SVD_-kiLUt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "157e0a98-629d-40ab-fba5-be3bea0e21cf"
+      },
+      "source": [
+        "round(12345678, -6)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GSlrkf4niwIw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# floor()とかceiling()の関数はあるか実験 -> ない\n",
+        "# floor(3.14159)\n",
+        "# ceiling(3.14159)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v-kRIH4xiHsI",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
-        "# Check your answer (Run this code cell to receive credit!)\n",
-        "q2.solution()\n",
+        "# いまここ\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87kxY31hjarr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 問題 3. キャンディを分配した余りを算出する関数\n",
         "\n",
-        "## 3.\n",
+        "アリスとボブとキャロルはキャンディを平等に分けて余りを潰してすてることにしました。91個ならば30個ずつとって、1個捨てます。\n",
         "\n",
-        "In a previous programming problem, the candy-sharing friends Alice, Bob and Carol tried to split candies evenly. For the sake of their friendship, any candies left over would be smashed. For example, if they collectively bring home 91 candies, they'll take 30 each and smash 1.\n",
+        "まずキャンディの数を引数として、捨てる余りの数を算出する簡単な関数をつくりました。\n",
         "\n",
-        "Below is a simple function that will calculate the number of candies to smash for *any* number of total candies.\n",
+        "これを修正して、3人でなく他の人数で分配して余りを算出プログラムにする。もし、2つ目の引数がなければ、3が使われる。\n",
         "\n",
-        "Modify it so that it optionally takes a second argument representing the number of friends the candies are being split between. If no second argument is provided, it should assume 3 friends, as before.\n",
-        "\n",
-        "Update the docstring to reflect this new behaviour.\n",
-        "\n",
+        "`docstring`のアップデートも忘れないように。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qv1AXu28krMM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0573c9d4-9f95-4afb-aa04-265f55faacc1"
+      },
+      "source": [
         "def to_smash(total_candies):\n",
         "    \"\"\"Return the number of leftover candies that must be smashed after distributing\n",
         "    the given number of candies evenly between 3 friends.\n",
@@ -883,16 +946,74 @@
         "    \"\"\"\n",
         "    return total_candies % 3\n",
         "\n",
-        "# Check your answer\n",
-        "q3.check()\n",
+        "to_smash(91)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aOGLPl0Bk8GX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "3ce539db-6a83-4588-e9fd-1abbddf43d9b"
+      },
+      "source": [
+        "def to_smash(total_candies, friends=3):\n",
+        "    \"\"\"Return the number of leftover candies that must be smashed after distributing\n",
+        "    the given number of candies evenly between number of friends which is default to 3.\n",
+        "    \n",
+        "    >>> to_smash(91, 4)\n",
+        "    3\n",
+        "    \"\"\"\n",
+        "    return total_candies % friends\n",
         "\n",
-        "#q3.hint()\n",
+        "print(to_smash(91,4))\n",
+        "print(to_smash(91))\n",
+        "print(to_smash(91,7))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zCybS9yMk0Cv",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 問題 4. エラーメッセージを読む\n",
+        "エラーメッセージを読むことは、Pythonの勉強になりますので、エラーがでたときは落ち込まずに逆にチャンスだと思ってがんばりましょう。\n",
         "\n",
-        "#q3.solution()\n",
+        "以下のコードセルではバギーなコードがコメントアウトされています。\n",
         "\n",
-        "## 4. (Optional)\n",
-        "\n",
-        "It may not be fun, but reading and understanding error messages will be an important part of your Python career.\n",
         "\n",
         "Each code cell below contains some commented-out buggy code. For each cell...\n",
         "\n",
@@ -901,6 +1022,36 @@
         "3. Fix the code (so that it accomplishes its intended purpose without throwing an exception)\n",
         "\n",
         "<!-- TODO: should this be autochecked? Delta is probably pretty small. -->\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UZuX1G4em4Rc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "577ba4cd-154a-4d5c-c2ce-ad876b6f0600"
+      },
+      "source": [
+        "# ruound_to_two_places(9.9999)\n",
+        "ruound_to_two_places(9.9999)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-49cf9e524676>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# ruound_to_two_places(9.9999)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mruound_to_two_places\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9.9999\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'ruound_to_two_places' is not defined"
+          ]
+        }
       ]
     },
     {
