--- a/020kagglepythonfunction001.ipynb
+++ b/020kagglepythonfunction001.ipynb
@@ -6,7 +6,7 @@
       "name": "020kagglepythonfunction001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvWgWi4Ak5x5pxeWA1QcjE",
+      "authorship_tag": "ABX9TyOV9FGNfMtbQz6K1e5aQfYK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -864,7 +864,7 @@
       "source": [
         "round(12345678, -6)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -894,17 +894,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "v-kRIH4xiHsI",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "# いまここ\n"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -948,7 +937,7 @@
         "\n",
         "to_smash(91)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -989,7 +978,7 @@
         "print(to_smash(91))\n",
         "print(to_smash(91,7))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,16 +1001,9 @@
         "## 問題 4. エラーメッセージを読む\n",
         "エラーメッセージを読むことは、Pythonの勉強になりますので、エラーがでたときは落ち込まずに逆にチャンスだと思ってがんばりましょう。\n",
         "\n",
-        "以下のコードセルではバギーなコードがコメントアウトされています。\n",
+        "以下のコードセルでは始めにコメントとして書いてあるバギーなコードを、アンコメントし、実行することを繰り返しながらコードを完成させて下さい。\n",
         "\n",
-        "\n",
-        "Each code cell below contains some commented-out buggy code. For each cell...\n",
-        "\n",
-        "1. Read the code and predict what you think will happen when it's run.\n",
-        "2. Then uncomment the code and run it to see what happens. (**Tip**: In the kernel editor, you can highlight several lines and press `ctrl`+`/` to toggle commenting.)\n",
-        "3. Fix the code (so that it accomplishes its intended purpose without throwing an exception)\n",
-        "\n",
-        "<!-- TODO: should this be autochecked? Delta is probably pretty small. -->\n"
+        "ちなみに、`ctrl`+`/`で選択した行を交互にコメントアウト、アンコメントできます。\n"
       ]
     },
     {
@@ -1031,62 +1013,98 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 185
+          "height": 35
         },
-        "outputId": "577ba4cd-154a-4d5c-c2ce-ad876b6f0600"
+        "outputId": "e1cf95f4-7e2e-4f1b-8d0a-8ec392a20a28"
       },
       "source": [
-        "# ruound_to_two_places(9.9999)\n",
-        "ruound_to_two_places(9.9999)"
+        "# round_to_one_place(9.9999)\n",
+        "\n",
+        "def round_to_one_place(number):\n",
+        "  return round(number, 1)\n",
+        "\n",
+        "round_to_one_place(9.9999)"
       ],
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-49cf9e524676>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# ruound_to_two_places(9.9999)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mruound_to_two_places\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9.9999\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'ruound_to_two_places' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "-2fJkLW1QYUV",
-        "colab_type": "text"
+        "id": "Z1HHE58Drje4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "db5d8951-62b7-4634-cd59-ac924dddb6d6"
       },
       "source": [
-        "\n",
-        "# ruound_to_two_places(9.9999)\n",
-        "\n",
-        "# x = -10\n",
-        "# y = 5\n",
-        "# # Which of the two variables above has the smallest absolute value?\n",
+        "x = -10\n",
+        "y = 5\n",
+        "# Which of the two variables above has the smallest absolute value?\n",
         "# smallest_abs = min(abs(x, y))\n",
         "\n",
+        "smallest_abs = min(abs(x), abs(y))\n",
+        "print(smallest_abs)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yTl62ktsss3B",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e7037c03-6ed9-4e0f-e198-afb06d0af6d3"
+      },
+      "source": [
         "# def f(x):\n",
         "#     y = abs(x)\n",
         "# return y\n",
         "\n",
         "# print(f(5))\n",
         "\n",
-        "# Keep Going\n",
+        "def f(x):\n",
+        "    y = abs(x)\n",
+        "    return y\n",
         "\n",
-        "Nice job with the code. Next up, you'll learn about *conditionals*, which you'll need to write interesting programs. Keep going **[here](https://www.kaggle.com/colinmorris/booleans-and-conditionals)**\n",
-        "\n",
-        "---\n",
-        "**[Python Home Page](https://www.kaggle.com/learn/python)**\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "*Have questions or comments? Visit the [Learn Discussion forum](https://www.kaggle.com/learn-forum/161283) to chat with other Learners.*"
+        "print(f(5))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
