--- a/030kaggle03bool.ipynb
+++ b/030kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNKM4xZOpC3a75+CRLutfCV",
+      "authorship_tag": "ABX9TyMplkJrqN/BJfhqPtZiWlnQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -251,11 +251,20 @@
       },
       "source": [
         "## 条件文\n",
-        "Conditionals\n",
-        "Booleans are most useful when combined with conditional statements, using the keywords if, elif, and else.\n",
+        "ブール型は`if、`elif`、`else`キーワードの条件文と組み合わせて使われる時に威力を発揮します。\n",
         "\n",
-        "Conditional statements, often referred to as if-then statements, let you control what pieces of code are run based on the value of some Boolean condition. Here's an example:\n",
-        "\n",
+        "条件文は`if`文とも言われ、ブール型の条件の結果によって実行するコードをコントロールするものです。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fOftabML70ku",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "def inspect(x):\n",
         "    if x == 0:\n",
         "        print(x, \"is zero\")\n",
@@ -267,9 +276,21 @@
         "        print(x, \"is unlike anything I've ever seen...\")\n",
         "\n",
         "inspect(0)\n",
-        "inspect(-15)\n",
-        "0 is zero\n",
-        "-15 is negative\n",
+        "inspect(-15)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ii0zA2kj7wsm",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "#いまここ\n",
+        "\n",
         "The if and else keywords are often used in other languages; its more unique keyword is elif, a contraction of \"else if\". In these conditional clauses, elif and else blocks are optional; additionally, you can include as many elif statements as you would like.\n",
         "\n",
         "Note especially the use of colons (:) and whitespace to denote separate blocks of code. This is similar to what happens when we define a function - the function header ends with :, and the following line is indented with 4 spaces. All subsequent indented lines belong to the body of the function, until we encounter an unindented line, ending the function definition.\n",
