--- a/010pytute001.ipynb
+++ b/010pytute001.ipynb
@@ -361,7 +361,7 @@
         "### 変数の型\n",
         "\n",
         "プログラミングで扱う値には種類があります。\n",
-        "Python では、整数 (integer)、実数 (real number)、文字列 (string) などが代表的な値の種類です。\n",
+        "Python では、整数 (integer)、実数 (real number = float)、文字列 (string) などが代表的な値の種類です。\n",
         "それぞれの種類によって、コンピュータ内での取扱い方が異なり、この種類のことは一般に型 (type) と呼びます。\n",
         "\n",
         "例えば、整数、実数、そして文字列をそれぞれ別々の変数に代入するコードは以下のとおりです。"
@@ -401,7 +401,7 @@
         "colab": {}
       },
       "source": [
-        "c = 'Chainer'"
+        "c = 'Colab'"
       ],
       "execution_count": null,
       "outputs": []
@@ -416,7 +416,6 @@
         "コンピュータの中での取り扱い方は異なりますが、Python では変数の型を自動的に決定するため、初めのうちはあまり気にする必要はありません。\n",
         "ただし、違う型同士の演算では場合によってエラーが発生するなどの問題が生じるため、簡単に型の特徴は把握しておく必要があります。\n",
         "\n",
-        "まずは、上記の `a`, `b`, `c` の型を確認する方法を紹介します。\n",
         "型の確認は `type()` という組み込み関数を使用します。"
       ]
     },
@@ -520,7 +519,6 @@
         "`a` は `int` という整数の型をもつ変数であり、`b` は `float` という実数の型をもつ変数です。\n",
         "この `float` という型の名前は、コンピュータ内で実数を扱うときの形式である浮動小数点数 (floating-point number) に由来しています。\n",
         "\n",
-        "!!!! と言い切っているが、いいのか？ やっぱfloatとreal numberは違うだろう、と思うのですが、どうでしょうか。\n",
         "\n",
         "`c` は `str` という文字列の型をもつ変数であり、値を定義するにはシングルクォーテーション `' '` もしくはダブルクォーテーション `\" \"` で対象の文字列をくくる必要があります。"
       ]
@@ -532,7 +530,7 @@
         "id": "Chdmx6HGIfEV"
       },
       "source": [
-        "Python では、`.` を含まない連続した数字を `int`、直前・直後も含め `.` が含まれる連続した数字を `float` だと自動的に解釈します。\n",
+        "Python では、小数点 `.` を含まない連続した数字を `int`、直前・直後も含め `.` が含まれる連続した数字を `float` だと自動的に解釈します。\n",
         "例えば、`7` や `365` は `int` ですが、`2.718`、`.25`、`10.` などは `float` になります。\n",
         "\n",
         "実数の `0` は `0.0` とも `.0` とも `0.` とも書くことができます。"
@@ -709,6 +707,16 @@
         "\n",
         "Python では複数の変数に対する代入を一度に行うことができ、複数同時の代入 (multiple assignment) と呼びます。\n",
         "例えば、上記の `a = 1` と `b = 1.2` を同時に一行で記述すると以下のようになります。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sfqj8iP6M4aO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
