--- a/010pytute001.ipynb
+++ b/010pytute001.ipynb
@@ -750,7 +750,7 @@
         "colab": {}
       },
       "source": [
-        "a, b, c = 1, 1.2, 'Chainer'"
+        "a, b, c = 1, 1.2, 'Colab'"
       ],
       "execution_count": null,
       "outputs": []
@@ -1299,7 +1299,7 @@
         "outputId": "5654572a-9d44-423a-9ada-da324b5f7dfa"
       },
       "source": [
-        "name1 = 'Chainer'\n",
+        "name1 = 'Colab '\n",
         "name2 = 'チュートリアル'\n",
         "\n",
         "name1 + name2"
@@ -2004,26 +2004,29 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0209e82b-f9fd-4868-b6c8-fc2b9e414d3f"
+        "outputId": "f8dd7bd3-e522-4479-e5af-de1040a6e4be"
       },
       "source": [
-        "name = 'Chainer'\n",
+        "name = 'Colab'\n",
         "\n",
         "name"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "application/vnd.google.colaboratory.intrinsic": {
+              "type": "string"
+            },
             "text/plain": [
-              "'Chainer'"
+              "'Colab'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 1
         }
       ]
     },
@@ -2113,7 +2116,7 @@
         "outputId": "e3324141-b48b-4668-841d-442abe5a6ffc"
       },
       "source": [
-        "name = 'Chainer'\n",
+        "name = 'Colab'\n",
         "\n",
         "'{} チュートリアルへようこそ'.format(name)"
       ],
@@ -2145,7 +2148,7 @@
         "outputId": "64f48915-fb3b-49f1-f00d-0dd55cf302b9"
       },
       "source": [
-        "name1 = 'Chainer'\n",
+        "name1 = 'Colab'\n",
         "name2 = 'チュートリアル'\n",
         "\n",
         "'{} {}へようこそ'.format(name1, name2)"
@@ -2898,7 +2901,7 @@
       },
       "source": [
         "# 複数の型が混在したリスト\n",
-        "array = [1, 1.2, 'Chainer']\n",
+        "array = [1, 1.2, 'Colab']\n",
         "array"
       ],
       "execution_count": null,
@@ -2940,7 +2943,7 @@
         "outputId": "572e4d48-aae1-46e9-cf6a-f2fbf1d68ac4"
       },
       "source": [
-        "array = [[1, 1.2, 'Chainer', True], [3.2, 'Tutorial']]\n",
+        "array = [[1, 1.2, 'Colab', True], [3.2, 'Tutorial']]\n",
         "array"
       ],
       "execution_count": null,
@@ -3043,7 +3046,7 @@
         "array = []\n",
         "\n",
         "# 空のリストに要素を追加\n",
-        "array.append('Chainer')\n",
+        "array.append('Colab')\n",
         "array.append('チュートリアル')\n",
         "\n",
         "array"
@@ -3265,7 +3268,7 @@
       "source": [
         "`tuple` のように中身が変更できない性質のことをイミュータブル (immutable)であると言います。反対に、`list` のように中身が変更できる性質のことをミュータブル (mutable)であると言います\n",
         "\n",
-        "タプルも Chainer でデータセットを扱うときなどに頻出する型です。その性質と取り扱い方を覚えておきましょう。"
+        "タプルも Colab でデータセットを扱うときなどに頻出する型です。その性質と取り扱い方を覚えておきましょう。"
       ]
     },
     {
@@ -4083,7 +4086,7 @@
         "outputId": "528f66f9-c589-481b-f82e-4bf4dfb9982d"
       },
       "source": [
-        "names = ['Python', 'Chainer']\n",
+        "names = ['Python', 'Colab']\n",
         "versions = ['3.7', '5.3.0']\n",
         "suffixes = ['!!', '!!', '?']\n",
         "\n",
@@ -4803,7 +4806,7 @@
       "source": [
         "# 引数のない関数の定義\n",
         "def hello():\n",
-        "    print('Chainerチュートリアルにようこそ')"
+        "    print('Colab チュートリアルにようこそ')"
       ],
       "execution_count": null,
       "outputs": []
@@ -4857,7 +4860,7 @@
         "colab": {}
       },
       "source": [
-        "def hello(message='Chainerチュートリアルにようこそ'):\n",
+        "def hello(message='Colab チュートリアルにようこそ'):\n",
         "    print(message)"
       ],
       "execution_count": null,
@@ -4910,7 +4913,7 @@
         "outputId": "9dd78b5c-4185-4f40-a40f-9d1bdfe3309a"
       },
       "source": [
-        "hello('Welcome to Chainer tutorial')"
+        "hello('Welcome to Colab tutorial')"
       ],
       "execution_count": null,
       "outputs": [
@@ -5359,7 +5362,7 @@
         "colab": {}
       },
       "source": [
-        "my_house = House('Chainer')"
+        "my_house = House('Colab')"
       ],
       "execution_count": null,
       "outputs": []
@@ -5371,10 +5374,10 @@
         "id": "9xHHa6rwv9dx"
       },
       "source": [
-        "`House` というクラスの `__init__()` メソッドに、`'Chainer'` という文字列を渡しています。\n",
+        "`House` というクラスの `__init__()` メソッドに、`'Colab'` という文字列を渡しています。\n",
         "`my_house` が、`House` クラスから作成されたインスタンスです。\n",
-        "ここで、クラス定義では `__init__()` メソッドは `self` と `name` という 2 つの引数をとっていましたが、呼び出しの際には `'Chainer'` という一つの引数しか与えていませんでした。\n",
-        "この `'Chainer'` という文字列は、1 つ目の引数であるにも関わらず、`__init__()` メソッドの定義では 2 つ目の引数であった `name` に渡されます。\n",
+        "ここで、クラス定義では `__init__()` メソッドは `self` と `name` という 2 つの引数をとっていましたが、呼び出しの際には `'Colab'` という一つの引数しか与えていませんでした。\n",
+        "この `'Colab'` という文字列は、1 つ目の引数であるにも関わらず、`__init__()` メソッドの定義では 2 つ目の引数であった `name` に渡されます。\n",
         "前述のように、メソッドは、インスタンスから呼び出されるとき自動的に第一引数にそのインスタンスへの参照を渡すためです。\n",
         "この自動的に渡される自身への参照は、呼び出しの際には明示的に指定しません。\n",
         "また、かならず 1 つ目の引数に自動的に渡されるため、呼び出し時に明示的に与えられた引数は 2 つ目以降の引数に渡されたものとして取り扱われます。\n",
@@ -5457,7 +5460,7 @@
         "\n",
         "このように、同じ機能を持つが、インスタンスによって保持するデータが異なったり、一部の動作が異なったりするようなケースを扱うのにクラスを利用します。\n",
         "Python の `int` 型、`float` 型、`str` 型…などは、実際には `int` クラス、`float` クラス、`str` クラスであり、それらの中では個別の変数（インスタンス）がどのような値になるかには関係なく、同じ型であれば共通して持っている機能が定義されています。\n",
-        "`5` や `0.3` や `'Chainer'` などは、それぞれ `int` クラスのインスタンス、`float` クラスのインスタンス、`str` クラスのインスタンスです。\n",
+        "`5` や `0.3` や `'Colab'` などは、それぞれ `int` クラスのインスタンス、`float` クラスのインスタンス、`str` クラスのインスタンスです。\n",
         "\n",
         "以上から、クラスを定義するというのは、新しい型を作るということでもあると分かります。"
       ]
