--- a/010pytute001.ipynb
+++ b/010pytute001.ipynb
@@ -710,16 +710,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Sfqj8iP6M4aO",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -1296,7 +1286,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "5654572a-9d44-423a-9ada-da324b5f7dfa"
+        "outputId": "993c6024-72dd-449a-baf8-7b58deecc23c"
       },
       "source": [
         "name1 = 'Colab '\n",
@@ -1304,19 +1294,22 @@
         "\n",
         "name1 + name2"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "application/vnd.google.colaboratory.intrinsic": {
+              "type": "string"
+            },
             "text/plain": [
-              "'Chainerチュートリアル'"
+              "'Colab チュートリアル'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 1
         }
       ]
     },
@@ -2011,7 +2004,7 @@
         "\n",
         "name"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2326,16 +2319,6 @@
         "- リスト (list)\n",
         "- タプル (tuple)\n",
         "- 辞書 (dictionary)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Vru3VcZJsx4A",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -2839,16 +2822,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tVX5OYXo8rOI",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "colab_type": "text",
         "id": "AyoiOU5OFfET"
       },
@@ -3076,7 +3049,7 @@
       "source": [
         "### タプル\n",
         "\n",
-        "タプル (tuple) はリストと同様に複数の要素をまとめた型ですが、リストとは異なる点として、定義した後に中の要素を変更できないという性質を持ちます。\n",
+        "タプル (tuple) はリストと同様に複数の要素をまとめた型ですが、リストとは異なる点として、**定義した後に中の要素を変更できない**という性質を持ちます。\n",
         "\n",
         "タプルの定義には `( )`を用います。"
       ]
@@ -3241,7 +3214,7 @@
         "outputId": "3db3cb2f-673f-4463-dbe3-82ced4e09830"
       },
       "source": [
-        "# error 次の行をuncommentして実行してエラーになることを確認せよ。\n",
+        "# error 次の行をuncommentして実行してエラーになることを確認する\n",
         "# array[0] = 10"
       ],
       "execution_count": null,
@@ -3645,6 +3618,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aTb0H_Os3wr2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "zTYLayT3qEzA"
       },
@@ -3660,9 +3643,33 @@
         "- 条件分岐 (`if`)\n",
         "\n",
         "Python の制御構文は、ヘッダ (header) と ブロック (block) と呼ばれる 2 つの部分で構成されています。\n",
-        "これらを合わせて 複合文 (compound statement) と呼びます。\n",
-        "\n",
-        "![ヘッダーとブロック](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_05.png?raw=1)"
+        "これらを合わせて 複合文 (compound statement) と呼びます。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OF0HBqx94KiT",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "if condition: <= コロン  <= ヘッダー\n",
+        "    (4spaces) processing <= ブロック\n",
+        "    (4spaces) processing <= ブロック\n",
+        "    (4spaces) processing <= ブロック\n",
+        "    (4spaces) processing <= ブロック\n",
+        "```            "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pDI-CJ7V6lWS",
+        "colab_type": "text"
+      },
+      "source": [
+        "![svg image](data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2240%22%20stroke%3D%22black%22%20stroke-width%3D%223%22%20fill%3D%22red%22%20/%3E%3C/svg%3E%0A)"
       ]
     },
     {
@@ -3685,7 +3692,16 @@
       "source": [
         "### 繰り返し（for 文）\n",
         "\n",
-        "同じ内容のメールを宛名だけ個別に変えて、1000 人に一斉送信したい場合など、繰り返す処理を記述する制御構文である `for` を使います。\n",
+        "同じ内容のメールを宛名だけ個別に変えて、1000 人に一斉送信したい場合など、繰り返す処理を記述する制御構文である `for` を使います。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ftM2IBRB8FLG",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "![for文](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_06.png?raw=1)"
       ]
